--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
   ext.versions = [
-      'minSdk': 8,
+      'minSdk': 9,
       'compileSdk': 26,
       'buildTools': '26.0.0',
   ]
@@ -9,7 +9,7 @@ buildscript {
       'rx1': 'io.reactivex:rxjava:1.3.0',
       'rx2': 'io.reactivex.rxjava2:rxjava:2.1.1',
       'annotations': 'com.android.support:support-annotations:25.4.0',
-      'espresso': 'com.android.support.test.espresso:espresso-core:2.2.2',
+      'espresso': 'com.android.support.test.espresso:espresso-idling-resource:3.0.2',
       'junit': 'junit:junit:4.12',
   ]
 
