--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,11 @@ android:
   components:
     - tools
     - platform-tools
+    - build-tools-26.0.0
+    - android-26
 
 jdk:
   - oraclejdk8
-
-before_script:
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 
 after_success:
   - .buildscript/deploy_snapshot.sh
