--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
   ext.deps = [
       'rx1': 'io.reactivex:rxjava:1.3.0',
       'rx2': 'io.reactivex.rxjava2:rxjava:2.1.1',
-      'annotations': 'com.android.support:support-annotations:25.4.0',
-      'espresso': 'com.android.support.test.espresso:espresso-core:2.2.2',
+      'annotations': 'androidx.annotation:annotation:1.0.0',
+      'espresso': 'androidx.test.espresso:espresso-core:3.1.0',
       'junit': 'junit:junit:4.12',
   ]
 
