--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,32 @@
 buildscript {
   ext.versions = [
       'minSdk': 14,
-      'compileSdk': 28,
+      'compileSdk': 29,
   ]
 
   ext.deps = [
-      'rx1': 'io.reactivex:rxjava:1.3.0',
-      'rx2': 'io.reactivex.rxjava2:rxjava:2.1.1',
-      'annotations': 'androidx.annotation:annotation:1.0.0',
+      'rx1': 'io.reactivex:rxjava:1.3.8',
+      'rx2': 'io.reactivex.rxjava2:rxjava:2.2.13',
+      'annotations': 'androidx.annotation:annotation:1.1.0',
       'espresso': 'androidx.test.espresso:espresso-core:3.1.0',
       'junit': 'junit:junit:4.12',
   ]
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.3.1'
+    classpath 'com.android.tools.build:gradle:3.5.1'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.27.0'
   }
 
   repositories {
     mavenCentral()
     google()
+    jcenter()
   }
 }
 
 subprojects {
+  apply plugin: 'com.github.ben-manes.versions'
+
   repositories {
     mavenCentral()
     google()
