Disable BuildConfig generation

--- a/rx1-idler/build.gradle
+++ b/rx1-idler/build.gradle
@@ -18,6 +18,10 @@ android {
   defaultConfig {
     minSdkVersion versions.minSdk
   }
+
+  libraryVariants.all {
+    it.generateBuildConfigProvider.configure { enabled = false }
+  }
 }
 
 dependencies {
