--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
   ext.deps = [
       'rx1': 'io.reactivex:rxjava:1.3.8',
       'rx2': 'io.reactivex.rxjava2:rxjava:2.2.19',
+      'rx3': 'io.reactivex.rxjava3:rxjava:3.0.3',
       'annotations': 'androidx.annotation:annotation:1.1.0',
       'espresso': 'androidx.test.espresso:espresso-core:3.1.0',
       'junit': 'junit:junit:4.12',
